<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/filter_title"
        android:fontFamily="@font/nunito_bold"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginEnd="16dp"
        android:padding="10dp"
        app:chipIconTint="@color/black"
        android:text="@string/reset_text"
        app:chipIcon="@drawable/vector"
        android:textColor="@color/black"
        app:chipStrokeColor="@color/black"
        app:chipStrokeWidth="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:fontFamily="@font/nunito_semi_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        android:text="@string/search_sort_by"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <com.google.android.material.chip.ChipGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipHealth"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/chip_background_selecter"
            android:text="@string/search_dialog_relevancy"
            android:textColor="@color/chip_text_color_selecter"
            app:chipStrokeColor="@color/app_stroke_color"
            app:chipStrokeWidth="1dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipTechnology"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/chip_background_selecter"
            android:text="@string/search_dialog_popularity"
            android:textColor="@color/chip_text_color_selecter"
            app:chipStrokeColor="@color/app_stroke_color"
            app:chipStrokeWidth="1dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipBusiness"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/chip_background_selecter"
            android:text="@string/search_dialogpublished_at"
            android:textColor="@color/chip_text_color_selecter"
            app:chipStrokeColor="@color/app_stroke_color"
            app:chipStrokeWidth="1dp" />

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintWidth_percent="0.7"
        app:cornerRadius="16dp"
        android:backgroundTint="@color/app_primary"
        android:text="SAVE"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>