<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipFilter"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/chip_background_selecter"
                android:text="@string/filter_title"
                android:textColor="@color/chip_text_color_selecter"
                app:chipStrokeColor="@color/app_stroke_color"
                app:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipTechnology"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/chip_background_selecter"
                android:text="@string/chip_technology_text"
                android:textColor="@color/chip_text_color_selecter"
                app:chipStrokeColor="@color/app_stroke_color"
                app:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipBusiness"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/chip_background_selecter"
                android:text="@string/chip_business_text"
                android:textColor="@color/chip_text_color_selecter"
                app:chipStrokeColor="@color/app_stroke_color"
                app:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipEntertainment"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/chip_background_selecter"
                android:text="@string/chip_entertainment_text"
                android:textColor="@color/chip_text_color_selecter"
                app:chipStrokeColor="@color/app_stroke_color"
                app:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipGeneral"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/chip_background_selecter"
                android:text="@string/chip_general_text"
                android:textColor="@color/chip_text_color_selecter"
                app:chipStrokeColor="@color/app_stroke_color"
                app:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipScience"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/chip_background_selecter"
                android:text="@string/chip_science_text"
                android:textColor="@color/chip_text_color_selecter"
                app:chipStrokeColor="@color/app_stroke_color"
                app:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipSport"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/chip_background_selecter"
                android:text="@string/chip_sport_text"
                android:textColor="@color/chip_text_color_selecter"
                app:chipStrokeColor="@color/app_stroke_color"
                app:chipStrokeWidth="1dp" />

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/topNewsList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>